class EingabeLoeschen {
    keyCPressed() {
        this.mainViewModel.displayValue= 0;
        this.mainViewModel.updateDisplay();
    }
}